--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@eslint/js": "^9.10.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^6.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^7.6.13",
     "@storybook/addon-interactions": "^7.6.13",
@@ -80,10 +82,9 @@
     "husky": "^9.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-visualizer": "^5.12.0",
     "standard-version": "^9.5.0",
     "storybook": "^7.6.13",
     "styled-components": "^6.1.8",
@@ -92,7 +93,9 @@
     "typescript-eslint": "^8.5.0"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "primereact": "^10.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "eslintConfig": {
     "extends": [
